# AiDN

./: .gitignore  00_VISION.md  01_TERMS.md  02_ARCHITECTURE.md  ADR-0001 — Service Ownership Principle  ARCHITECTURE.md  IMP-0001 — Hypervisor Repository Layout  IMP-0002 — Embedded Service Architecture  IMP-0003 — Internal Event Bus (IEB)  IMP-0100 — Hypervisor Persistence Model  IMP-0200 — Hypervisor Service Interfaces  IMP-0201 — Service API Design Rules  IMP-0300 — Hypervisor Bootstrap Sequence  IMP-0301 — Dependency Injection and Object Lifetime  IMP-0400 — Package Organization and Coding Standards  IMP-0500 — Provider SDK Specification  IMP-0600 — Capability SDK Specification  IMP-0700 — Hypervisor Public API  README.md  RFC-0008 — Distributed Attestation Network (DAN)  RFC-0015 — Model Class Registry (MCR)  RFC-0024 — Endpoint Manifest Specification (EMS)  RFC-0025 — Endpoint Advertisement Specification (EAS)  ROADMAP.md  TODO.md  design-qa.md  pyproject.toml
docs/product/: ECO-0003-validation-economics.md  UX-0001-hypervisor-operator-journey.md  UX-0002-endpoint-session-and-payment-flow.md
src/aidn_hypervisor/: api.py  bundle_registry.py  dashboard.py  main.py  model_store.py  persistence.py  process_manager.py  queue.py  registry_api.py  registry_models.py  registry_service.py  service.py  (+5 more)
tests/: test_api.py  test_bundle_registry.py  test_model_store.py  test_persistence.py  test_process_manager.py  test_queue.py  test_registry_api.py  test_registry_service.py  test_resources.py  test_scheduler.py  test_service.py  test_smoke.py  test_state.py  test_wallet.py
(+76 files in other folders)
