[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidn-hypervisor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "pydantic>=2.8", "uvicorn>=0.30"]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["src"]
